// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IndicatorCircle /> should apply the given color 1`] = `
<IndicatorCircle
  color="#fff"
  paused={true}
  size={32}
  strokeWidth={4}
>
  <svg
    className="css-1llkk3e"
    height={32}
    viewBox="25 25 50 50"
    width={32}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      className="css-jiweh7"
      cx="50"
      cy="50"
      r="20"
    />
  </svg>
</IndicatorCircle>
`;

exports[`<IndicatorCircle /> should apply the given size 1`] = `
<svg
  className="css-1llkk3e"
  height={32}
  viewBox="25 25 50 50"
  width={32}
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    className="css-1w8vil2"
    cx="50"
    cy="50"
    r="20"
  />
</svg>
`;
